--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Spotify Controller",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index"
+    "start": "node index",
+    "dev": "nodemon index",
+    "test": "echo \"Error: no test specified\"",
+    "int-test": "mocha --require babel-core/register --recursive test"
   },
   "author": "Asa Brown",
   "license": "ISC",
@@ -14,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^9.0.2",
     "mongoose": "^5.9.19",
     "spotify-web-api-node": "^4.0.0",
     "twilio": "^3.47.0",
