--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.0.2",
     "mongoose": "^5.9.19",
+    "promisify": "0.0.3",
     "spotify-web-api-node": "^4.0.0",
     "twilio": "^3.47.0",
     "url": "^0.11.0"
